Avro Change Log

Trunk (not yet released)

  NEW FEATURES

    AVRO-975. C#: Add RPC support. (Mark Lamley via cutting)

  IMPROVEMENTS

    AVRO-1355. Java: Reject schemas with duplicate field
    names. (Christophe Taton via cutting)

    AVRO-1332. C#: Improve DatumReader performance.
    (David McIntosh via cutting)

  BUG FIXES

    AVRO-1368. Fix SpecificDatumWriter to, when writing a string
    schema, not silently convert any object to a string.
    (Christophe Taton via cutting)

    AVRO-1374. Java: Fix compilation against Hadoop 2.1.
    (Julian Zhou via cutting)

    AVRO-1366. Fix specification's description of metadata format.
    (cutting)

    AVRO-1377. Java: Fix a bug in Schema#toString() when a namespaced
    enum or fixed is defined within an un-namespaced record.
    (Graham Sanderson via cutting)

Avro 1.7.5 (12 August 2013)

  NEW FEATURES

    AVRO-1307. Java: Add 'cat' tool to append and sample data files.
    (Vincenz Priesnitz via cutting)

    AVRO-1274. Java: Add a schema builder API. (tomwhite)

    AVRO-1319. Java: Add command line tools to generate random data
    files and to convert Avro to Trevni.  (cutting)

    AVRO-823: C#: Add data file support. (David McIntosh via cutting)

    AVRO-896. C: Snappy compression codec. (Grisha Trubetskoy via dcreager)

    AVRO-1337. Java: Add a command line tool to generate schema files
    from a protocol. (Bertrand Dechoux via cutting)

    AVRO-1341. Java: Add reflection annotations @AvroName, @AvroIgnore,
    @AvroMeta, @AvroAlias and @AvroEncode. (Vincenz Priesnitz via cutting)

    AVRO-1353. Java: Permit specification of data model (generic,
    specific, reflect, or other) in mapreduce job configuration.
    (Marshall Bockrath-Vandegrift via cutting)

  IMPROVEMENTS

    AVRO-1260. Ruby: Improve read performance. (Martin Kleppmann via cutting)

    AVRO-1267. Java: Permit dashes in IDL property names. (cutting)

    AVRO-1272. Ruby: Improve schema namespace handling.